--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 ENV=development
 PORT=8080
 JWT_SECRET=eiLayooVa9ut8maiquoh6ahJahd2oH9k
-DDBB_DSN=postgres://postgres:esonoesharinasa@localhost/undeux?sslmode=disable
+DATABASE_URL=postgres://postgres:esonoesharinasa@localhost/undeux?sslmode=disable
