--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.28.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
