--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
     "axios": "^0.22.0",
+    "date-fns": "^2.27.0",
     "formik": "^2.2.9",
     "immer": "^9.0.6",
     "notistack": "^2.0.2",
