--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-query": "^3.28.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.8",
     "typescript": "^4.1.2",
     "use-immer": "^0.6.0",
     "web-vitals": "^1.0.1",
