--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
+    "@mui/x-data-grid": "^5.2.1",
     "axios": "^0.22.0",
     "date-fns": "^2.27.0",
     "formik": "^2.2.9",
