--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "type:coverage": "type-coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +60,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.3.1"
+    "@types/react-router-dom": "^5.3.1",
+    "type-coverage": "^2.21.0"
   }
 }
